# mail-ops-scripts

./: .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  README.md  blacklist_monitor.py  config.ini  dashboard.html  debug_imap.py  default.private  dkim_gen.py  dmarc_parser.py  dmarc_parser.py   mailops.py  pyproject.toml  spf_check.py
.github/workflows/: ci.yml
dmarc_reports/: sample_data.xml
docs/: ROADMAP.md  ROADMAP_REFACTOR.md  ROADMAP_V3.md
mailops/: __main__.py  blacklist_monitor.py  cli.py  dkim_gen.py  dmarc_parser.py  imap_fetcher.py  spf_check.py  ui.py
tests/: debug_imap.py  test_version.py
