[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-ops-scripts"
version = "2.2.0"
description = "A unified operational toolkit for email server administration and DMARC analysis."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "Beau Bremer", email = "beau.bremer@tutamial.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0", 
    "isort>=5.12",
    "mypy>=1.5"
]

[project.scripts]
mailops = "mailops.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailops*"]
